--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "1.1.0",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sort-by": "^1.2.0"
