--- a/ui/package.json
+++ b/ui/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "lodash": "^4.17.4",
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
-    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
